--- a/src/pages/styles/catalog.css
+++ b/src/pages/styles/catalog.css
@@ -1,5 +1,12 @@
-.content{
+.content {
     min-height: calc(100vh - 109px);
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+
+}
+
+.content .filters button {
+    margin-right: 6px;
 }
