--- a/src/components/styles/footer.css
+++ b/src/components/styles/footer.css
@@ -1,10 +1,46 @@
 .footer{
     width: 100%;
-    color: black;
+    color: white;
     text-align: center;
-    background-color: bisque;
-    height: 60px;
+    background-color: black;
+    height: 200px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+}
+
+.footer .news-letter{
+    display: flex;
+    flex-direction: column;
+}
+
+.footer .news-letter input{
+    background: none;
+    border: none;
+    border-bottom: solid 1px grey;
+    margin-bottom: 10px;
+    color: grey;
+
+}
+
+.footer .help{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.footer .contact{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.footer a{
+    text-decoration: none;
+    color: white;
+    font-weight: lighter;
+}
+
+.contact .icons-list{
+    color: grey;
 }
