--- a/src/components/styles/product.css
+++ b/src/components/styles/product.css
@@ -10,7 +10,9 @@
 }
 
 .product img {
-    width: 248px;    
+    height: 248px;
+    width: 248px;
+    border-radius: 3px;
 }
 
 .product h3{
@@ -31,7 +33,7 @@
     margin-right: 25px;
     font-size: 22px;
     font-weight: 600;
-    color: #457994;
+    color: black;
 }
 
 
@@ -41,6 +43,12 @@
 
 .product .parent {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     margin-top: 6px;
+}
+
+.product .id{
+    position: absolute;
+    padding-left: 5px;
+    color: white;
 }
