--- a/src/pages/styles/about.css
+++ b/src/pages/styles/about.css
@@ -6,3 +6,36 @@
 .about h3{
     color: darkcyan;
 }
+
+.about .top-img{
+    width: 100%;
+    height: 600px;
+}
+
+.about h2{
+    text-align: left;
+    margin: 10px;
+    font-weight: bold;
+}
+
+.about p{
+    text-align: left;
+    font-size: 18px;
+    margin: 10px 10px;
+}
+
+.box{
+    margin-right: auto;
+    margin-left: auto;
+    width: 80%;
+}
+
+.about .bot-pics{
+    display: flex;
+}
+
+.about .bot-pics img{
+    height: 600px;
+    width: 650px;
+    margin: 10px;
+}
