--- a/src/pages/styles/cart.css
+++ b/src/pages/styles/cart.css
@@ -5,11 +5,47 @@
 
 .cart h1 {
     text-align: center;
-    color:darkcyan;
+    color: black;
 }
 
 .cart h3 {
     text-align: center;
     font-weight: 300;
-    color: #333;
+    color: rgb(180, 4, 4);
+}
+
+.list .prod-cart{
+    display: flex;
+    background-color: white;
+    margin: 10px 20px;
+    border: solid 1px #333;
+    border-radius: 5px;
+    padding: 6px;
+    align-items: center;
+}
+
+
+.cart .prod-cart img{
+    width: 150px;
+    height: 150px;
+    border-radius: 5px;
+}
+
+.cart .prod-cart h5{
+    flex: 5;
+}
+
+.cart .prod-cart label{
+    flex: 1;
+    margin-bottom: 20px;
+}
+
+.cart .prod-cart button{
+    width: 75px;
+    margin-right: 10px;
+}
+
+.cart .prod-cart label span{
+    display: block;
+    color: #848b93;
 }
