--- a/src/pages/styles/home.css
+++ b/src/pages/styles/home.css
@@ -1,11 +1,11 @@
 .home {
-    
+    background-color: white;
 }
 
 .home h1 {
     text-align: center;
-    color:#333;
-    font-family: Lobster,cursive;
+    color: #333;
+    font-family: Lobster, cursive;
     font-size: 120px;
     padding-left: 10px;
 }
@@ -21,6 +21,7 @@
 
 .home .main-img {
     width: 100%;
+    max-height: 1000px;
 }
 
 .home .home-text {
@@ -34,32 +35,59 @@
 
 .home .section-2 {
     display: flex;
+    height: 600px;
+    justify-content: space-evenly;
+    margin: 10px;
+
 }
 
 .home .section-2 .info {
-    flex: 2;
-    background-color: white;
+    background-image: url('/public/images/bcman.jpg');
+    width: 950px;
+    height: 600px;
+    margin-right: 5px;
+}
+
+.home .section-2 .for-her{
+    background-image: url('/public/images/bcwoman.jpg');
+    width: 950px;
+    height: 600px;
+    margin-left: 5px;
 }
 
 .home .section-2 .info h3 {
-    color: darkcyan;
+    color: white;
     font-weight: 400;
     font-size: 42px;
     padding-top: 40px;
 }
 
-.home .section-2 .info p {
-    font-weight: 300;
-    font-size: 20px;
+.home .section-2 .for-her h3{
+    color: white;
+    font-weight: 400;
+    font-size: 42px;
+    padding-top: 40px;
 }
 
-.home .section-2 .img {
-    
+.home .section-2 .for-him-text{
+    position: absolute;
+    bottom: -275px;
+    left: 40px;
+}
+
+.home .section-2 .for-her-text{
+    position: absolute;
+    bottom: -275px;
+    left: 990px;
 }
 
 
 .home .relative {
     position: relative;
+}
+
+.home .relative img{
+    height: 800px;
 }
 
 .home .over-img {
@@ -68,6 +96,26 @@
     border-radius: 6px;
     width: 500px;
     padding: 30px 20px;
-    top: 450px;
-    left: 550px;
+    top: 400px;
+    left: 725px;
+}
+
+/* Slide Show CSS */
+
+.each-slide-effect>div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-size: 100% 800px;
+    height: 600px;
+
+}
+
+.each-slide-effect span {
+    position: fixed;
+    bottom: 20px;
+    padding: 20px;
+    font-size: 40px;
+    background: #efefef;
+    text-align: center;
 }
