--- a/src/pages/styles/cart.css
+++ b/src/pages/styles/cart.css
@@ -49,3 +49,24 @@
     display: block;
     color: #848b93;
 }
+
+.cart .cart-container{
+    display: flex;
+}
+
+.cart .cart-container .list{
+    flex: 3;
+}
+
+.cart .cart-container .buy-container{
+    flex: 1;
+    background-color: white;
+    margin-right: 30px;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding-top: 20px;
+    max-height: 400px;
+}
+
