--- a/src/pages/styles/about.css
+++ b/src/pages/styles/about.css
@@ -32,10 +32,12 @@
 
 .about .bot-pics{
     display: flex;
+
 }
 
 .about .bot-pics img{
     height: 600px;
-    width: 650px;
+    width: 550px;
     margin: 10px;
+    max-width: 650px;
 }
